upwrap gift faster + img switch fix afstemninger.html + padding fix

--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,7 @@ height: 100%;
   width: 60%;
   margin: 0 auto;
   background-color: #95D3D1;
+  padding-top: 16.25px;
 }
 
 .forside-element-afstemning {
